--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,9 @@
     "                       \"\"\")\n",
     "df = pd.DataFrame(cur.fetchall()) #Take results and create dataframe\n",
     "df.columns = [i[0] for i in cur.description]\n",
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "cur.execut"
    ]
   },
   {
@@ -1304,7 +1306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
